[package]
name = "ms_rss_reader_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.43.0"
features = [
    "Foundation",
    "Foundation_Collections",
    "Win32_Foundation",
    "Web_Syndication",
    "Data_Xml_Dom",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Threading",
]
